Fix alignment

--- a/2021/css/site.css
+++ b/2021/css/site.css
@@ -90,3 +90,7 @@ li > a.nav-highlight {
   padding: 10px;
 }
 
+.pc-table {
+  width: 100%;
+}
+
